# verdict

./: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  requirements-frontend.txt  requirements-gpu.txt  requirements.txt
.streamlit/: config.toml
config/: calibration.json  categories.yaml  models.yaml
docker/: entrypoint.sh
eval/: bakeoff.py  calibrate.py  golden.py  test_deterministic.py
eval/mock_tasks/: hard_tasks.json  tasks.sample.json
scripts/: fetch_model.py
src/: __init__.py
src/core/: config.py  parsing.py  schemas.py  settings.py
src/frontend/: app.py  data.py  index.html  playground.py  serve.py
src/frontend/app_pages/: chat.py  insights.py
src/llm/: local_llm.py  local_server.py  model_fetch.py  openai_compat.py  remote_llm.py
src/pipeline/: ledger.py  metrics.py  orchestrator.py  results_writer.py
src/routing/: budget.py  calibration.py  dispatcher.py  prompt_compression.py
src/solvers/: __init__.py  base.py  deterministic.py  exec_solvers.py  reasoning_solvers.py  text_solvers.py
src/verification/: checks.py
